--- a/components/meetups/MeetupItem.module.css
+++ b/components/meetups/MeetupItem.module.css
@@ -14,6 +14,9 @@
   width: 100%;
   object-fit: cover;
   background: transparent center center/cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
 
 .content {
